--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,17 @@ extends layout
 block content
   h1= title
   p Hii  #{title}
-  button(type="button", class="btn btn-info") Press Me 
-      
+  button(type="button", class="btn btn-info" onclick="goFaster()") Press Me
+  br
+  div#faster Increase the speed
+
+  
+    script.
+      var mph = 20;
+      var change = 1;
+
+      function goFaster() {
+        mph += change;
+        change += 1;
+        document.getElementById("faster").textContent = "MPH " + mph + " with change " + change;
+      }
