--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
   br
   div#faster Increase the speed
 
-  
+  a(href="/vehicles") Vehicles Search Results
     script.
       var mph = 20;
       var change = 1;
