--- a/views/Orders.pug
+++ b/views/Orders.pug
@@ -6,4 +6,10 @@ block content
   div(class="container-fluid")
   div(class="row")
    each o,index  in results
-    div(class="col-sm-2") #{o.name}, #{o.id}, #{o.price}
+    div(class="col-sm-2" onclick =`buy(${index})`) #{o.name}, #{o.id}, #{o.price}
+
+     script.
+        function buy(a)
+        {
+            alert(`You purchased Item ${a+1}`)
+        }
