--- a/views/Ordersdelete.pug
+++ b/views/Ordersdelete.pug
@@ -5,22 +5,22 @@ block content
  if (toShow == null)
     h2 No instance to delete
  else
-    - let Orders_id = toShow._id
+    - let Ordersid = toShow._id
     - let Orders_name = toShow.name
-    - let Ordersid = toShow.id
+    - let Orders_id = toShow.id
     - let Orders_price = toShow.price
     - let actionid = "/resource/Orders/" + Orders_id
     script let actionid = "#{actionid}"
     div
         div.row
             div(class='OrdersAttr mr-3') Orders ID is:
-            div #{Orders_id}
+            div #{Ordersid}
         div.row
             div(class='OrdersAttr mr-3') Orders name is:
             div #{Orders_name}
         div.row
             div(class='OrdersAttr mr-3') Orders ID is:
-            div #{Ordersid}
+            div #{Orders_id}
         div.row
             div(class='OrdersAttr mr-3') Orders Price is:
             div #{Orders_price}
