--- a/views/Ordersdelete.pug
+++ b/views/Ordersdelete.pug
@@ -9,7 +9,7 @@ block content
     - let Orders_name = toShow.name
     - let Orders_id = toShow.id
     - let Orders_price = toShow.price
-    - let actionid = "/resource/Orders/" + Orders_id
+    - let actionid = "/resource/Orders/" + Ordersid
     script let actionid = "#{actionid}"
     div
         div.row
