--- a/views/Ordersdetail.pug
+++ b/views/Ordersdetail.pug
@@ -2,9 +2,9 @@ extends layout
 block content
    h1= title
    - let Ordersid = toShow._id
-   - let Orders_name  = toShow.Orders_name
-   - let Orders_id  = toShow.Orders_id
-   - let Orders_price = toShow.Orders_price
+   - let Orders_name = toShow.name
+   - let Orders_id = toShow.id
+   - let Orders_price = toShow.price
    div
       div.row
          div(class='OrdersAttr mr-3') Orders ID is:
@@ -16,5 +16,6 @@ block content
          div(class='OrdersAttr mr-3') Orders id is:
          div #{Orders_id}
       div.row
-         div(class='OrdersAttr mr-3') Orders Cost is:
+         div(class='OrdersAttr mr-3') Orders price is:
          div #{Orders_price}
+
