--- a/views/Ordersdetail.pug
+++ b/views/Ordersdetail.pug
@@ -1,21 +1,33 @@
 extends layout
-block content
-   h1= title
-   - let Ordersid = toShow._id
-   - let Orders_name = toShow.name
-   - let Orders_id = toShow.id
-   - let Orders_price = toShow.price
-   div
-      div.row
-         div(class='OrdersAttr mr-3') Orders ID is:
-         div #{Ordersid}
-      div.row
-         div(class='OrdersAttr mr-3') Orders name is:
-         div #{Orders_name}
-      div.row
-         div(class='OrdersAttr mr-3') Orders id is:
-         div #{Orders_id}
-      div.row
-         div(class='OrdersAttr mr-3') Orders price is:
-         div #{Orders_price}
 
+block content
+  div.container.mt-4
+    h1= title
+    - let Ordersid = toShow._id
+    - let Orders_name = toShow.name
+    - let Orders_id = toShow.id
+    - let Orders_price = toShow.price
+
+    div.row
+      div.col-md-6
+        div(class='card')
+          div(class='card-body')
+            h5(class='card-title') Orders ID is:
+            p(class='card-text') #{Ordersid}
+      div.col-md-6
+        div(class='card')
+          div(class='card-body')
+            h5(class='card-title') Orders name is:
+            p(class='card-text') #{Orders_name}
+
+    div.row
+      div.col-md-6
+        div(class='card')
+          div(class='card-body')
+            h5(class='card-title') Orders id is:
+            p(class='card-text') #{Orders_id}
+      div.col-md-6
+        div(class='card')
+          div(class='card-body')
+            h5(class='card-title') Orders price is:
+            p(class='card-text') #{Orders_price}
