--- a/views/Ordersupdate.pug
+++ b/views/Ordersupdate.pug
@@ -1,45 +1,50 @@
 extends layout
+
 block content
-    h1= title
+    div.container.mt-4
+        h1= title
 
-    if (toShow == null)
-        h2 No instance to delete
-    else
-        - let Ordersid = toShow._id
-        - let Orders_name = toShow.name
-        - let Orders_id = toShow.id
-        - let Orders_price = toShow.price
+        if (toShow == null)
+            h2 No instance to delete
+        else
+            - let Ordersid = toShow._id
+            - let Orders_name = toShow.name
+            - let Orders_id = toShow.id
+            - let Orders_price = toShow.price
 
-        div.row(class='mb-2')
-            div.mr-1 ID is
-            div #{Ordersid}
-            - let actionid = "/resource/Orders/" + Ordersid
-            form(id='OrdersForm', action= actionid, method="PUT")
-                div.form-group
-                    label.OrdersAttr(for='name') Orders name
-                    input#name(type='text', name='name', value= Orders_name)
-                div.form-group
-                    label.OrdersAttr(for='id') Orders ID 
-                    input#id(type='number', name='id', value= Orders_id)
-                div.form-group
-                    label.OrdersAttr(for='price') Orders price
-                    input#price(type='number', name='price', value= Orders_price)
-                input(type="submit")
+            div.col(class='mb-2')
+                div.col-sm-2(class='mr-1') ID is:
+                div.col-sm-2 #{Ordersid}
+                - let actionid = "/resource/Orders/" + Ordersid
+                form(id='OrdersForm', action=actionid, method='PUT' class='col-sm-8')
+                    div.form-group.row
+                        label.OrdersAttr(for='name' class='col-sm-2 col-form-label') Orders name
+                        div.col-sm-10
+                            input#name(type='text', name='name', value=Orders_name class='form-control')
+                    div.form-group.row
+                        label.OrdersAttr(for='id' class='col-sm-2 col-form-label') Orders ID 
+                        div.col-sm-10
+                            input#id(type='number', name='id', value=Orders_id class='form-control')
+                    div.form-group.row
+                        label.OrdersAttr(for='price' class='col-sm-2 col-form-label') Orders price
+                        div.col-sm-10
+                            input#price(type='number', name='price', value=Orders_price class='form-control')
+                    input(type='submit' class='btn btn-primary')
 
     script.
         document.forms['OrdersForm'].addEventListener('submit', (event) => {
-        event.preventDefault();
-        // TODO do something here to show user that form is being submitted
-        fetch(event.target.action, {
-        method: 'PUT',
-        body: new URLSearchParams(new FormData(event.target)) // event.target is the form
-        }).then((resp) => {
-        return resp.json(); // or resp.text() or whatever the server sends
-        }).then((body) => {
-        alert("Update succeded")
-        // TODO handle body
-        }).catch((error) => {
-        // TODO handle error
-        alert("Update failed " + error )
-        });
+            event.preventDefault();
+            // TODO do something here to show user that form is being submitted
+            fetch(event.target.action, {
+                method: 'PUT',
+                body: new URLSearchParams(new FormData(event.target)) // event.target is the form
+            }).then((resp) => {
+                return resp.json(); // or resp.text() or whatever the server sends
+            }).then((body) => {
+                alert('Update succeeded');
+                // TODO handle body
+            }).catch((error) => {
+                // TODO handle error
+                alert('Update failed ' + error);
+            });
         });
