--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Hii  #{title}
-  button(type="button", class="btn btn-info" onclick="goFaster()") Press Me
-  br
-  div#faster Increase the speed
-
-  a(href="/Orders") Orders Search Results
-    script.
-      var mph = 20;
-      var change = 1;
-
-      function goFaster() {
-        mph += change;
-        change += 1;
-        document.getElementById("faster").textContent = "MPH " + mph + " with change " + change;
-      }
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/Orders") Take me to Orders
+    br
+    a(href="/logout") Logout
