--- a/views/Orders.pug
+++ b/views/Orders.pug
@@ -1,8 +1,8 @@
-  extends layout
+extends layout
 
-  block content
+block content
     h1= title
-    -button.btn.btn-primary(onClick=`dispatch(\"/Orders/create\")`) Create Orders
+    button.btn.btn-primary(onClick=`dispatch(\"/Orders/create\")`) Create Orders
     - let items = results
     div(class="container-fluid")
       div(class="row m-1")
@@ -10,15 +10,14 @@
           - let destination = `dispatch(\"/Orders/update?id=${o._id}\")`
           - let details = `dispatch(\"/Orders/detail?id=${o._id}\")`
           - let deleteItem = `dispatch(\"/Orders/delete?id=${o._id}\")`
-          div(class="row-sm-2", class="m-1" onclick =`buy(${index})`) 
-            p Orders Name: #{o.name}
-            p Orders id: #{o.id}
-            p Orders Price: #{o.price}
-            div(class="row")
-              button.btn( class="btn-primary ml-1", onclick= destination) Update
-              button.btn.btn-success.m-2(onclick=details) View Details
-              button.btn.btn-danger.m-2(onclick=deleteItem) Delete
-    
+            div(class="row-sm-2 p-10 m-2" class="m-1" onclick =`buy(${index})`) 
+              p Orders Name: #{o.name}
+              p Orders id: #{o.id}
+              p Orders Price: #{o.price}
+              div(class="row")
+                button.btn( class="btn-dark ml-1", onclick= destination) Update
+                button.btn.btn-info.m-2(onclick=details) View Details
+                button.btn.btn-secondary.m-2(onclick=deleteItem) Delete
     script.
       function dispatch(path){
         window.location.href=path
